y.output
Terminals which are not used

   COLON
   DOT
   ELSIF
   WHILE
   FOR
   BREAK
   CONTINUE
   STRING_T


Rules never reduced

   67 declaration_or_statement: declaration_statement


State 38 conflicts: 15 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: definition_or_statement
    2                 | translation_unit definition_or_statement

    3 definition_or_statement: function_definition
    4                        | statement

    5 function_definition: type_specifier IDENTIFIER LP RP SEMICOLON
    6                    | type_specifier IDENTIFIER LP parameter_list RP SEMICOLON

    7 parameter_list: type_specifier IDENTIFIER
    8               | parameter_list COMMA type_specifier IDENTIFIER

    9 argument_list: assignment_expression
   10              | argument_list COMMA assignment_expression

   11 statement: expression SEMICOLON
   12          | declaration_statement
   13          | compound_statement
   14          | selection_statement
   15          | return_statement

   16 declaration_statement: type_specifier IDENTIFIER SEMICOLON
   17                      | type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON

   18 selection_statement: IF LP expression RP compound_statement
   19                    | IF LP expression RP compound_statement ELSE compound_statement

   20 return_statement: RETURN expression SEMICOLON
   21                 | RETURN SEMICOLON

   22 type_specifier: BOOLEAN_T
   23               | INT_T
   24               | DOUBLE_T

   25 expression: assignment_expression

   26 assignment_expression: logical_or_expression
   27                      | postfix_expression assignment_operator assignment_expression

   28 assignment_operator: ASSIGN_T
   29                    | ADD_ASSIGN_T
   30                    | SUB_ASSIGN_T
   31                    | MUL_ASSIGN_T
   32                    | DIV_ASSIGN_T
   33                    | MOD_ASSIGN_T

   34 logical_or_expression: logical_and_expression
   35                      | logical_or_expression LOGICAL_OR logical_and_expression

   36 logical_and_expression: equality_expression
   37                       | logical_and_expression LOGICAL_AND equality_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ relational_expression
   40                    | equality_expression NE relational_expression

   41 relational_expression: additive_expression
   42                      | relational_expression GT additive_expression
   43                      | relational_expression GE additive_expression
   44                      | relational_expression LT additive_expression
   45                      | relational_expression LE additive_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression ADD multiplicative_expression
   48                    | additive_expression SUB multiplicative_expression

   49 multiplicative_expression: unary_expression
   50                          | multiplicative_expression MUL unary_expression
   51                          | multiplicative_expression DIV unary_expression
   52                          | multiplicative_expression MOD unary_expression

   53 unary_expression: postfix_expression
   54                 | SUB unary_expression
   55                 | EXCLAMATION unary_expression

   56 postfix_expression: primary_expression
   57                   | postfix_expression LP argument_list RP
   58                   | postfix_expression LP RP
   59                   | postfix_expression INCREMENT
   60                   | postfix_expression DECREMENT

   61 primary_expression: LP expression RP
   62                   | IDENTIFIER
   63                   | INT_LITERAL
   64                   | DOUBLE_LITERAL
   65                   | TRUE_T
   66                   | FALSE_T

   67 declaration_or_statement: declaration_statement
   68                         | statement

   69 declaration_or_statement_list: declaration_or_statement
   70                              | declaration_or_statement_list declaration_or_statement

   71 compound_statement: LC RC
   72                   | LC declaration_or_statement_list RC


Terminals, with rules where they appear

$end (0) 0
error (256)
LP (258) 5 6 18 19 57 58 61
RP (259) 5 6 18 19 57 58 61
LC (260) 71 72
RC (261) 71 72
COMMA (262) 8 10
LOGICAL_AND (263) 37
LOGICAL_OR (264) 35
EQ (265) 39
ASSIGN_T (266) 17 28
NE (267) 40
GT (268) 42
GE (269) 43
LE (270) 45
LT (271) 44
SEMICOLON (272) 5 6 11 16 17 20 21
COLON (273)
ADD (274) 47
SUB (275) 48 54
MUL (276) 50
DIV (277) 51
MOD (278) 52
ADD_ASSIGN_T (279) 29
SUB_ASSIGN_T (280) 30
MUL_ASSIGN_T (281) 31
DIV_ASSIGN_T (282) 32
MOD_ASSIGN_T (283) 33
INCREMENT (284) 59
DECREMENT (285) 60
EXCLAMATION (286) 55
DOT (287)
INT_LITERAL (288) 63
DOUBLE_LITERAL (289) 64
IDENTIFIER (290) 5 6 7 8 16 17 62
IF (291) 18 19
ELSE (292) 19
ELSIF (293)
WHILE (294)
FOR (295)
RETURN (296) 20 21
BREAK (297)
CONTINUE (298)
TRUE_T (299) 65
FALSE_T (300) 66
BOOLEAN_T (301) 22
INT_T (302) 23
DOUBLE_T (303) 24
STRING_T (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
translation_unit (51)
    on left: 1 2, on right: 0 2
definition_or_statement (52)
    on left: 3 4, on right: 1 2
function_definition (53)
    on left: 5 6, on right: 3
parameter_list (54)
    on left: 7 8, on right: 6 8
argument_list (55)
    on left: 9 10, on right: 10 57
statement (56)
    on left: 11 12 13 14 15, on right: 4 68
declaration_statement (57)
    on left: 16 17, on right: 12 67
selection_statement (58)
    on left: 18 19, on right: 14
return_statement (59)
    on left: 20 21, on right: 15
type_specifier (60)
    on left: 22 23 24, on right: 5 6 7 8 16 17
expression (61)
    on left: 25, on right: 11 17 18 19 20 61
assignment_expression (62)
    on left: 26 27, on right: 9 10 25 27
assignment_operator (63)
    on left: 28 29 30 31 32 33, on right: 27
logical_or_expression (64)
    on left: 34 35, on right: 26 35
logical_and_expression (65)
    on left: 36 37, on right: 34 35 37
equality_expression (66)
    on left: 38 39 40, on right: 36 37 39 40
relational_expression (67)
    on left: 41 42 43 44 45, on right: 38 39 40 42 43 44 45
additive_expression (68)
    on left: 46 47 48, on right: 41 42 43 44 45 47 48
multiplicative_expression (69)
    on left: 49 50 51 52, on right: 46 47 48 50 51 52
unary_expression (70)
    on left: 53 54 55, on right: 49 50 51 52 54 55
postfix_expression (71)
    on left: 56 57 58 59 60, on right: 27 53 57 58 59 60
primary_expression (72)
    on left: 61 62 63 64 65 66, on right: 56
declaration_or_statement (73)
    on left: 67 68, on right: 69 70
declaration_or_statement_list (74)
    on left: 69 70, on right: 70 72
compound_statement (75)
    on left: 71 72, on right: 13 18 19


state 0

    0 $accept: . translation_unit $end

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    RETURN          shift, and go to state 9
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11
    BOOLEAN_T       shift, and go to state 12
    INT_T           shift, and go to state 13
    DOUBLE_T        shift, and go to state 14

    translation_unit           go to state 15
    definition_or_statement    go to state 16
    function_definition        go to state 17
    statement                  go to state 18
    declaration_statement      go to state 19
    selection_statement        go to state 20
    return_statement           go to state 21
    type_specifier             go to state 22
    expression                 go to state 23
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33
    compound_statement         go to state 34


state 1

   61 primary_expression: LP . expression RP

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    expression                 go to state 35
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33


state 2

   71 compound_statement: LC . RC
   72                   | LC . declaration_or_statement_list RC

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    RC              shift, and go to state 36
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    RETURN          shift, and go to state 9
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11
    BOOLEAN_T       shift, and go to state 12
    INT_T           shift, and go to state 13
    DOUBLE_T        shift, and go to state 14

    statement                      go to state 37
    declaration_statement          go to state 38
    selection_statement            go to state 20
    return_statement               go to state 21
    type_specifier                 go to state 39
    expression                     go to state 23
    assignment_expression          go to state 24
    logical_or_expression          go to state 25
    logical_and_expression         go to state 26
    equality_expression            go to state 27
    relational_expression          go to state 28
    additive_expression            go to state 29
    multiplicative_expression      go to state 30
    unary_expression               go to state 31
    postfix_expression             go to state 32
    primary_expression             go to state 33
    declaration_or_statement       go to state 40
    declaration_or_statement_list  go to state 41
    compound_statement             go to state 34


state 3

   54 unary_expression: SUB . unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    unary_expression    go to state 42
    postfix_expression  go to state 43
    primary_expression  go to state 33


state 4

   55 unary_expression: EXCLAMATION . unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    unary_expression    go to state 44
    postfix_expression  go to state 43
    primary_expression  go to state 33


state 5

   63 primary_expression: INT_LITERAL .

    $default  reduce using rule 63 (primary_expression)


state 6

   64 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 64 (primary_expression)


state 7

   62 primary_expression: IDENTIFIER .

    $default  reduce using rule 62 (primary_expression)


state 8

   18 selection_statement: IF . LP expression RP compound_statement
   19                    | IF . LP expression RP compound_statement ELSE compound_statement

    LP  shift, and go to state 45


state 9

   20 return_statement: RETURN . expression SEMICOLON
   21                 | RETURN . SEMICOLON

    LP              shift, and go to state 1
    SEMICOLON       shift, and go to state 46
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    expression                 go to state 47
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33


state 10

   65 primary_expression: TRUE_T .

    $default  reduce using rule 65 (primary_expression)


state 11

   66 primary_expression: FALSE_T .

    $default  reduce using rule 66 (primary_expression)


state 12

   22 type_specifier: BOOLEAN_T .

    $default  reduce using rule 22 (type_specifier)


state 13

   23 type_specifier: INT_T .

    $default  reduce using rule 23 (type_specifier)


state 14

   24 type_specifier: DOUBLE_T .

    $default  reduce using rule 24 (type_specifier)


state 15

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end            shift, and go to state 48
    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    RETURN          shift, and go to state 9
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11
    BOOLEAN_T       shift, and go to state 12
    INT_T           shift, and go to state 13
    DOUBLE_T        shift, and go to state 14

    definition_or_statement    go to state 49
    function_definition        go to state 17
    statement                  go to state 18
    declaration_statement      go to state 19
    selection_statement        go to state 20
    return_statement           go to state 21
    type_specifier             go to state 22
    expression                 go to state 23
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33
    compound_statement         go to state 34


state 16

    1 translation_unit: definition_or_statement .

    $default  reduce using rule 1 (translation_unit)


state 17

    3 definition_or_statement: function_definition .

    $default  reduce using rule 3 (definition_or_statement)


state 18

    4 definition_or_statement: statement .

    $default  reduce using rule 4 (definition_or_statement)


state 19

   12 statement: declaration_statement .

    $default  reduce using rule 12 (statement)


state 20

   14 statement: selection_statement .

    $default  reduce using rule 14 (statement)


state 21

   15 statement: return_statement .

    $default  reduce using rule 15 (statement)


state 22

    5 function_definition: type_specifier . IDENTIFIER LP RP SEMICOLON
    6                    | type_specifier . IDENTIFIER LP parameter_list RP SEMICOLON
   16 declaration_statement: type_specifier . IDENTIFIER SEMICOLON
   17                      | type_specifier . IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 50


state 23

   11 statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 51


state 24

   25 expression: assignment_expression .

    $default  reduce using rule 25 (expression)


state 25

   26 assignment_expression: logical_or_expression .
   35 logical_or_expression: logical_or_expression . LOGICAL_OR logical_and_expression

    LOGICAL_OR  shift, and go to state 52

    $default  reduce using rule 26 (assignment_expression)


state 26

   34 logical_or_expression: logical_and_expression .
   37 logical_and_expression: logical_and_expression . LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 53

    $default  reduce using rule 34 (logical_or_expression)


state 27

   36 logical_and_expression: equality_expression .
   39 equality_expression: equality_expression . EQ relational_expression
   40                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 54
    NE  shift, and go to state 55

    $default  reduce using rule 36 (logical_and_expression)


state 28

   38 equality_expression: relational_expression .
   42 relational_expression: relational_expression . GT additive_expression
   43                      | relational_expression . GE additive_expression
   44                      | relational_expression . LT additive_expression
   45                      | relational_expression . LE additive_expression

    GT  shift, and go to state 56
    GE  shift, and go to state 57
    LE  shift, and go to state 58
    LT  shift, and go to state 59

    $default  reduce using rule 38 (equality_expression)


state 29

   41 relational_expression: additive_expression .
   47 additive_expression: additive_expression . ADD multiplicative_expression
   48                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 60
    SUB  shift, and go to state 61

    $default  reduce using rule 41 (relational_expression)


state 30

   46 additive_expression: multiplicative_expression .
   50 multiplicative_expression: multiplicative_expression . MUL unary_expression
   51                          | multiplicative_expression . DIV unary_expression
   52                          | multiplicative_expression . MOD unary_expression

    MUL  shift, and go to state 62
    DIV  shift, and go to state 63
    MOD  shift, and go to state 64

    $default  reduce using rule 46 (additive_expression)


state 31

   49 multiplicative_expression: unary_expression .

    $default  reduce using rule 49 (multiplicative_expression)


state 32

   27 assignment_expression: postfix_expression . assignment_operator assignment_expression
   53 unary_expression: postfix_expression .
   57 postfix_expression: postfix_expression . LP argument_list RP
   58                   | postfix_expression . LP RP
   59                   | postfix_expression . INCREMENT
   60                   | postfix_expression . DECREMENT

    LP            shift, and go to state 65
    ASSIGN_T      shift, and go to state 66
    ADD_ASSIGN_T  shift, and go to state 67
    SUB_ASSIGN_T  shift, and go to state 68
    MUL_ASSIGN_T  shift, and go to state 69
    DIV_ASSIGN_T  shift, and go to state 70
    MOD_ASSIGN_T  shift, and go to state 71
    INCREMENT     shift, and go to state 72
    DECREMENT     shift, and go to state 73

    $default  reduce using rule 53 (unary_expression)

    assignment_operator  go to state 74


state 33

   56 postfix_expression: primary_expression .

    $default  reduce using rule 56 (postfix_expression)


state 34

   13 statement: compound_statement .

    $default  reduce using rule 13 (statement)


state 35

   61 primary_expression: LP expression . RP

    RP  shift, and go to state 75


state 36

   71 compound_statement: LC RC .

    $default  reduce using rule 71 (compound_statement)


state 37

   68 declaration_or_statement: statement .

    $default  reduce using rule 68 (declaration_or_statement)


state 38

   12 statement: declaration_statement .
   67 declaration_or_statement: declaration_statement .

    LP              reduce using rule 12 (statement)
    LP              [reduce using rule 67 (declaration_or_statement)]
    LC              reduce using rule 12 (statement)
    LC              [reduce using rule 67 (declaration_or_statement)]
    RC              reduce using rule 12 (statement)
    RC              [reduce using rule 67 (declaration_or_statement)]
    SUB             reduce using rule 12 (statement)
    SUB             [reduce using rule 67 (declaration_or_statement)]
    EXCLAMATION     reduce using rule 12 (statement)
    EXCLAMATION     [reduce using rule 67 (declaration_or_statement)]
    INT_LITERAL     reduce using rule 12 (statement)
    INT_LITERAL     [reduce using rule 67 (declaration_or_statement)]
    DOUBLE_LITERAL  reduce using rule 12 (statement)
    DOUBLE_LITERAL  [reduce using rule 67 (declaration_or_statement)]
    IDENTIFIER      reduce using rule 12 (statement)
    IDENTIFIER      [reduce using rule 67 (declaration_or_statement)]
    IF              reduce using rule 12 (statement)
    IF              [reduce using rule 67 (declaration_or_statement)]
    RETURN          reduce using rule 12 (statement)
    RETURN          [reduce using rule 67 (declaration_or_statement)]
    TRUE_T          reduce using rule 12 (statement)
    TRUE_T          [reduce using rule 67 (declaration_or_statement)]
    FALSE_T         reduce using rule 12 (statement)
    FALSE_T         [reduce using rule 67 (declaration_or_statement)]
    BOOLEAN_T       reduce using rule 12 (statement)
    BOOLEAN_T       [reduce using rule 67 (declaration_or_statement)]
    INT_T           reduce using rule 12 (statement)
    INT_T           [reduce using rule 67 (declaration_or_statement)]
    DOUBLE_T        reduce using rule 12 (statement)
    DOUBLE_T        [reduce using rule 67 (declaration_or_statement)]
    $default        reduce using rule 12 (statement)


state 39

   16 declaration_statement: type_specifier . IDENTIFIER SEMICOLON
   17                      | type_specifier . IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 76


state 40

   69 declaration_or_statement_list: declaration_or_statement .

    $default  reduce using rule 69 (declaration_or_statement_list)


state 41

   70 declaration_or_statement_list: declaration_or_statement_list . declaration_or_statement
   72 compound_statement: LC declaration_or_statement_list . RC

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    RC              shift, and go to state 77
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    RETURN          shift, and go to state 9
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11
    BOOLEAN_T       shift, and go to state 12
    INT_T           shift, and go to state 13
    DOUBLE_T        shift, and go to state 14

    statement                  go to state 37
    declaration_statement      go to state 38
    selection_statement        go to state 20
    return_statement           go to state 21
    type_specifier             go to state 39
    expression                 go to state 23
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33
    declaration_or_statement   go to state 78
    compound_statement         go to state 34


state 42

   54 unary_expression: SUB unary_expression .

    $default  reduce using rule 54 (unary_expression)


state 43

   53 unary_expression: postfix_expression .
   57 postfix_expression: postfix_expression . LP argument_list RP
   58                   | postfix_expression . LP RP
   59                   | postfix_expression . INCREMENT
   60                   | postfix_expression . DECREMENT

    LP         shift, and go to state 65
    INCREMENT  shift, and go to state 72
    DECREMENT  shift, and go to state 73

    $default  reduce using rule 53 (unary_expression)


state 44

   55 unary_expression: EXCLAMATION unary_expression .

    $default  reduce using rule 55 (unary_expression)


state 45

   18 selection_statement: IF LP . expression RP compound_statement
   19                    | IF LP . expression RP compound_statement ELSE compound_statement

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    expression                 go to state 79
    assignment_expression      go to state 24
    logical_or_expression      go to state 25
    logical_and_expression     go to state 26
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 32
    primary_expression         go to state 33


state 46

   21 return_statement: RETURN SEMICOLON .

    $default  reduce using rule 21 (return_statement)


state 47

   20 return_statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 80


state 48

    0 $accept: translation_unit $end .

    $default  accept


state 49

    2 translation_unit: translation_unit definition_or_statement .

    $default  reduce using rule 2 (translation_unit)


state 50

    5 function_definition: type_specifier IDENTIFIER . LP RP SEMICOLON
    6                    | type_specifier IDENTIFIER . LP parameter_list RP SEMICOLON
   16 declaration_statement: type_specifier IDENTIFIER . SEMICOLON
   17                      | type_specifier IDENTIFIER . ASSIGN_T expression SEMICOLON

    LP         shift, and go to state 81
    ASSIGN_T   shift, and go to state 82
    SEMICOLON  shift, and go to state 83


state 51

   11 statement: expression SEMICOLON .

    $default  reduce using rule 11 (statement)


state 52

   35 logical_or_expression: logical_or_expression LOGICAL_OR . logical_and_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 10
    FALSE_T         shift, and go to state 11

    logical_and_expression     go to state 84
    equality_expression        go to state 27
    relational_expression      go to state 28
    additive_expression        go to state 29
    multiplicative_expression  go to state 30
    unary_expression           go to state 31
    postfix_expression         go to state 43
    primary_expression         go to state 33


state 53

   37 logical_and_expression: logical_and_expression LOGICAL_AND . equality_expression
